tests/toy/neg/001453_mutation.toylang
program a = { var a : 0; } .
